go-webhook/k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  annotations:
    webhook.dbd.in/v2: "required-value"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
