go-webhook/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: webhook
  annotations:
    webhook.dbd.in/v1: "required-value"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
      - name: webhook-server
        image: sdputurn/webhook-server:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: certs
          mountPath: "/app/certs"
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: ca-key-pair
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: webhook
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: webhook-server
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-annotation-validator
webhooks:
- name: pod-annotation.webhook.dbd.in
  clientConfig:
    service:
      name: webhook-server
      namespace: webhook
      path: /validate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR2akNDQXFhZ0F3SUJBZ0lVYkZkMEg5U29jN2l4T2hmVHR1WCszemVxOXEwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1Z6RUxNQWtHQTFVRUJoTUNSRVV4RURBT0JnTlZCQWNNQjNkaGJHUnZjbVl4RERBS0JnTlZCQW9NQTFOQgpVREVPTUF3R0ExVUVDd3dGVTBGUVUwWXhHREFXQmdOVkJBTU1EMk4xYzNSdmJTMWpiMjV6ZFd4RFFUQWVGdzB5Ck5UQXhNVFl4TVRFME5EWmFGdzB5TmpBeE1UWXhNVEUwTkRaYU1GY3hDekFKQmdOVkJBWVRBa1JGTVJBd0RnWUQKVlFRSERBZDNZV3hrYjNKbU1Rd3dDZ1lEVlFRS0RBTlRRVkF4RGpBTUJnTlZCQXNNQlZOQlVGTkdNUmd3RmdZRApWUVFEREE5amRYTj [...]
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
